[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/Other/sconce.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Other/flame-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Other/light.png" type="Texture" id=3]
[ext_resource path="res://Environment/Assets/Sconce.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 8, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 8, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 8, 8 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "flame",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 4.81248, 4.89999 )

[node name="Sconce" type="Node2D"]
script = ExtResource( 4 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 3 )
texture_scale = 0.5
color = Color( 0.635294, 0.470588, 0.419608, 1 )
energy = 1.25
mode = 2

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -8 )
frames = SubResource( 5 )
animation = "flame"
frame = 1
speed_scale = 2.3
playing = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -8 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 6 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
